# ordering-system

./: .env.example  .gitignore  README.md  alembic-auth.ini  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  week1.md  week2.md
alembic/: env.py
alembic/versions/: cd168d2f5666_create_orders_and_order_items_tables.py
cli/: main.py
data/: orders.json  orders2.json  orders3.json
docs/: architecture.md  data-model.md  validation.md
scripts/: experiment_sqlalchemy.py  explore_validation.py
src/api/: config.py  database.py  db_models.py  main.py  repository.py  schemas.py
src/application/services/: order_service.py
src/auth/: config.py
src/auth/alembic/: env.py
src/auth/api/: main.py  schemas.py
src/auth/domain/: repository.py  user.py
src/database/: connection.py  models.py
src/domain/: exceptions.py  order.py  repository.py  state_machine.py
src/infrastructure/db/: connection.py  models.py
src/orders/alembic/: env.py
src/orders/api/: main.py  schemas.py
src/orders/domain/: order.py  repository.py  state_machine.py
src/repository/: order_repository.py
src/service/: order_service.py
src/utils/: ids.py  models.py  validation.py
tests/: conftest.py  test_cli.py  test_ids.py  test_models.py  test_validation.py
tests/integration/: test_order_repository.py  test_orders.py
tests/orders/integration/: conftest.py  (+2 more)
tests/test_api/: test_orders.py  test_schemas.py
tests/test_cli/: test_models.py
tests/test_service/: test_order_service.py
tests/unit/: test_cli.py  test_order.py  test_order_service.py  test_schemas.py
(+11 files in other folders)
