[project]
name = "ordering-system"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.20.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
explicit_package_bases = true
